--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <title>Franklyn Barrera</title>
   </head>
-  <body data-spy="scroll" data-target="#menu-contenido" >
+  <body data-spy="scroll" data-target="#menu-contenido" data-offset="64" >
   
 <!-- HEADER -->   
 
