--- a/test/cryptobucks.html
+++ b/test/cryptobucks.html
@@ -454,7 +454,7 @@
 
               <div id="faqOne" class="accordion__content" data-parent="accordionFaq">
                 <p>
-                  No, the Cryptobucks platform receives and processes all cryptocurrency transactions and converts to USd, we do all the work.
+                  No, the Cryptobucks platform receives and processes all cryptocurrency transactions and converts to USD, we do all the work.
                 </p>
               </div>
             </div>
