--- a/test/point-of-sale.html
+++ b/test/point-of-sale.html
@@ -389,11 +389,13 @@
                     </button>
                     <p class="is-uppercase has-text-light">see more equipment</p>
                     <span class="icon has-text-info">
-                        <img src="./images/arrow-down-128.png">
+                        <a href="#aliants-desktop-point-of-sale">
+                            <img src="./images/arrow-down-128.png">
+                        </a>
                     </span>
                 </div>
             </section>
-            <section class="aliants-desktop-point-of-sale section">
+            <section id="aliants-desktop-point-of-sale" class="aliants-desktop-point-of-sale section">
                 <div class="aliants-desktop-title__content">
                     <h2 class="is-size-2 has-text-link has-text-centered has-text-weight-light">
                         Aliant’s Desktop Point of Sale
@@ -525,11 +527,13 @@
                     </button>
                     <p class="is-uppercase has-text-light">see unattended equipment</p>
                     <span class="icon has-text-info">
-                        <img src="./images/arrow-down-128.png">
+                        <a href="#aliants-unattended-point-of-sale">
+                            <img src="./images/arrow-down-128.png">
+                        </a>
                     </span>
                 </div>
             </section>
-            <section class="aliants-unattended-point-of-sale section container">
+            <section id="aliants-unattended-point-of-sale" class="aliants-unattended-point-of-sale section container">
                 <div class="aliants-unattended-title__content">
                     <h2 class="is-size-2 has-text-link has-text-centered has-text-weight-light">
                         Aliant’s Unattended Point of Sale
